--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nanoid": "^3.1.10",
     "nprogress": "^0.2.0",
     "pm2": "^4.4.0",
+    "qiniu-js": "^3.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
